[#3654] Fix search icon not properly vertically aligned

--- a/ckan/public/base/less/search.less
+++ b/ckan/public/base/less/search.less
@@ -42,7 +42,7 @@
         padding: 15px;
       }
       button {
-        margin-top: -15px;
+        margin-top: -4px;
         right: 15px;
         height: 30px;
         i {
